FlightPath 6.x Changelog
========================

2021-06-03
  Added new schools filter option to degrees, and working on groups.  Filters on degrees list now actually
  a form (and added new form to groups) so other modules can modify with hook_form_alter if desired.  Right now,
  it's only really for the schools module.
  

2021-06-01
  Fixed bug in pager_query which was sometimes throwing numbers off.  Expanded functionality of the paget_query function.
  
  More work on school_id system, amending the need in some tables.  Decided to declare that CWIDs *must be unique* in FlightPath.
  Therefore, the users table will be the only place that a user's school_id is stored.
  
  Changed wording on user module, which stated CWID had to be numeric.  It does not.


2021-05-31
  Adding school_id to api and queries throughout FlightPath.
  

2021-05-27
  Changing some style issues when listing multiple degrees for a student.
  
  Change wording for select of tracks if you are required to select a certain number of tracks for a degree.
  
  Fixed bug where you couldn't override a semester block title unless you also had a course.
  

2021-05-25
  Added schools module to core, and made changes to system.install as well as other .install files, so that tables
  now have a school_id field and needed keys.
  

2021-05-16
  Added lots of changes to student search. We now can see Academic Priority.  Uses pager query and table sort as well.  No
  more limit on 300 students, since we can do pager.  Made table headers responsive, as well as priority vals.


2021-05-11
  Added ability to have custom logout messages.
  

2021-05-09
  Added "last_login" column to users table, and to users screen in admin console.  Also make it so the "contact FlightPath production team" link
  does not appear if no email address is entered.
  

2021-05-05
  In the school settings form, you may now choose to sort courses in degrees and groups not by alphabetical, but by the order